# HW-2

./: Dockerfile  bot.py  classes.py  pyproject.toml  requirements.txt
