[tool.poetry]
name = "web-hw2"
version = "0.1.0"
description = ""
authors = ["Hannakua <alucky1181@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw2"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
